--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,12 @@
 
     <groupId>org.example</groupId>
     <artifactId>spring-learn-root</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-
+    <modules>
+        <module>spring-framework-lab-1</module>
+        <module>my-spring-framework-1</module>
+        <module>spring-framework-lab-1-web</module>
+    </modules>
 
 </project>
