--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>my-spring-framework-1</module>
         <module>spring-framework-lab-1-web</module>
         <module>spring-framework-lab-2</module>
+        <module>spring-framework-lab-3</module>
+        <module>my-spring-mvc-v1.0</module>
     </modules>
 
 </project>
