--- a/spring-framework-lab-2/src/main/resources/jdbc.properties
+++ b/spring-framework-lab-2/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-url=jdbc:mysql://127.0.0.1:3306/db
+url=jdbc:mysql://127.0.0.1:3306/db?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
 driver=com.mysql.jdbc.Driver
 username=root
 password=root
