--- a/my-spring-mvc-v1.0/src/main/webapp/WEB-INF/web.xml
+++ b/my-spring-mvc-v1.0/src/main/webapp/WEB-INF/web.xml
@@ -4,5 +4,16 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-
+  <servlet>
+    <servlet-name>dispatcherServlet</servlet-name>
+    <servlet-class>com.myspring.handler.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>spring.properties</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>dispatcherServlet</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
 </web-app>
