--- a/spring-framework-lab-1/pom.xml
+++ b/spring-framework-lab-1/pom.xml
@@ -63,6 +63,11 @@
             <version>5.1.14.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.20</version>
+        </dependency>
+        <dependency>
             <groupId>aopalliance</groupId>
             <artifactId>aopalliance</artifactId>
             <version>1.0</version>
